--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
 
   hive: ^2.0.4
   hive_generator: ^1.1.0
-  #  hive_flutter: ^1.0.0
+  hive_flutter: ^1.0.0
 
   json_serializable: ^4.1.3
 
