--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,17 @@ dependencies:
   hive_generator: ^1.1.0
   hive_flutter: ^1.0.0
 
-  json_serializable: ^4.1.3
-
   #----- Firebase ------
   firebase_core: ^1.3.0
   firebase_auth: ^2.0.0
   cloud_firestore: ^2.3.0
   firebase_storage: ^9.0.0
+
+  #----- Backend ------
+  retrofit: ^2.0.1
+  logger: ^1.0.0
+  dio: ^4.0.0
+  json_annotation: ^4.0.0
 
   #----- Social login ------
   google_sign_in: ^5.0.4
@@ -45,14 +49,6 @@ dependencies:
 
   universal_html: ^2.0.8
 
-  #------ In-app Payments -----
-  #  square_in_app_payments: ^1.3.0
-
-  #------ Requester -----
-  #  http: ^0.12.0
-
-  # Bloc for state management
-  flutter_bloc: ^7.0.0
   # Functional programming thingies
   dartz: ^0.10.0-nullsafety.2
 
@@ -106,7 +102,9 @@ dev_dependencies:
   #  chopper_generator: ^2.3.4
 
   #------ For Serialization objects ------
-  build_runner: ^2.0.4
+  build_runner: ^2.0.6
+  json_serializable: ^4.1.3
+  retrofit_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
