--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,9 @@
 name: salons_app_flutter_module
 description: A new Flutter module.
 
+#  flutter packages pub run build_runner build --delete-conflicting-outputs
+
+
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
