--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   google_sign_in: ^5.0.4
   flutter_facebook_auth: ^3.5.4
 
+  firebase_storage: ^10.2.5
+
   #----- Shared preferences ----
   shared_preferences: ^2.0.6
 
