--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,38 +21,38 @@ description: A new Flutter module.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.2 <3.0.0"
+  sdk: ">=2.12.2 <3.0.5"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  hive: ^2.0.4
-  hive_generator: ^1.1.0
-  hive_flutter: ^1.0.0
+  hive: ^2.2.2
+  hive_generator: ^1.1.3
+  hive_flutter: ^1.1.0
 
-  firebase_auth: ^3.3.0
-  connectivity: ^3.0.6
+  firebase_auth: ^3.3.19
+  connectivity_plus: ^2.3.3
 
   #----- Backend ------
-  retrofit: ^2.0.1
-  logger: ^1.0.0
-  dio: ^4.0.0
-  json_annotation: ^4.0.0
+  retrofit: ^3.0.1+1
+  logger: ^1.1.0
+  dio: ^4.0.6
+  json_annotation: ^4.5.0
 
   #----- Social login ------
-  google_sign_in: ^5.0.4
-  flutter_facebook_auth: ^3.5.4
+  google_sign_in: ^5.3.3
+  flutter_facebook_auth: ^4.3.4+2
 
-  firebase_storage: ^10.2.5
+  firebase_storage: ^10.2.17
 
   #----- Shared preferences ----
-  shared_preferences: ^2.0.6
+  shared_preferences: ^2.0.15
 
-  universal_html: ^2.0.8
+  universal_io: ^2.0.4
 
   # Functional programming thingies
-  dartz: ^0.10.0-nullsafety.2
+  dartz: ^0.10.1
 
   #---- DateTime Formatter ----
   #  intl: 0.16.0
@@ -67,23 +67,23 @@ dependencies:
   #  url_launcher: ^5.1.4
 
   #---- Dependency Injection -----
-  get_it: ^7.1.3
+  get_it: ^7.2.0
 
   #generate id
-  uuid: 3.0.4
+  uuid: 3.0.6
 
-  flutter_svg: ^0.22.0
+  flutter_svg: ^1.1.0
 
   #------ Toast message ------
-  fluttertoast: ^8.0.7
+  fluttertoast: ^8.0.9
 
   #------ Image picker ------
   #  image_picker: 0.6.7+2
-  image_picker_web: 2.0.1
+  image_picker_web: 2.1.1
 
   #------ UI -------
-  font_awesome_flutter: ^9.0.0
-  cached_network_image: ^3.0.0
+  font_awesome_flutter: ^10.1.0
+  cached_network_image: ^3.2.1
   #  flutter_speed_dial: ^1.0.4
   #  loading: ^1.0.1
 
@@ -94,7 +94,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.3
+  cupertino_icons: ^1.0.5
 
 dev_dependencies:
   flutter_test:
@@ -104,9 +104,9 @@ dev_dependencies:
   #  chopper_generator: ^2.3.4
 
   #------ For Serialization objects ------
-  build_runner: ^2.0.6
-  json_serializable: ^4.1.3
-  retrofit_generator: ^2.0.1
+  build_runner: ^2.1.11
+  json_serializable: ^6.2.0
+  retrofit_generator: ^4.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
