--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   universal_io: ^2.0.4
 
   # Functional programming thingies
-  dartz: ^0.10.1
+  either_dart: ^0.1.4
 
   #---- DateTime Formatter ----
   #  intl: 0.16.0
