--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,8 +78,9 @@ dependencies:
   fluttertoast: ^8.0.9
 
   #------ Image picker ------
-  #  image_picker: 0.6.7+2
-  image_picker_web: 2.1.1
+  image_picker: ^0.8.5+3
+  image_picker_for_web: ^2.1.8
+
 
   #------ UI -------
   font_awesome_flutter: ^10.1.0
