--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,20 +31,20 @@ dependencies:
   hive_generator: ^1.1.3
   hive_flutter: ^1.1.0
 
-  firebase_auth: ^3.3.19
-  connectivity_plus: ^2.3.3
+  firebase_auth: ^4.2.1
+  connectivity_plus: ^3.0.2
 
   #----- Backend ------
-  retrofit: ^3.0.1+1
+  retrofit: ^3.3.1
   logger: ^1.1.0
   dio: ^4.0.6
-  json_annotation: ^4.5.0
+  json_annotation: ^4.7.0
 
   #----- Social login ------
-  google_sign_in: ^5.3.3
-  flutter_facebook_auth: ^4.3.4+2
+  google_sign_in: ^5.4.2
+  flutter_facebook_auth: ^5.0.6
 
-  firebase_storage: ^10.2.17
+  firebase_storage: ^11.0.8
 
   #----- Shared preferences ----
   shared_preferences: ^2.0.15
@@ -52,7 +52,7 @@ dependencies:
   universal_io: ^2.0.4
 
   # Functional programming thingies
-  either_dart: ^0.1.4
+  either_dart: ^0.3.0
 
   #---- DateTime Formatter ----
   #  intl: 0.16.0
@@ -70,25 +70,25 @@ dependencies:
   get_it: ^7.2.0
 
   #generate id
-  uuid: 3.0.6
+  uuid: ^3.0.7
 
-  flutter_svg: ^1.1.0
+  flutter_svg: ^1.1.6
 
   #------ Toast message ------
-  fluttertoast: ^8.0.9
+  fluttertoast: ^8.1.2
 
   #------ Image picker ------
-  image_picker: ^0.8.5+3
-  image_picker_for_web: ^2.1.8
+  image_picker: ^0.8.6
+  image_picker_for_web: ^2.1.10
 
 
   #------ UI -------
-  font_awesome_flutter: ^10.1.0
-  cached_network_image: ^3.2.1
+  font_awesome_flutter: ^10.3.0
+  cached_network_image: ^3.2.3
   #  flutter_speed_dial: ^1.0.4
   #  loading: ^1.0.1
 
-  tuple: ^2.0.0
+  tuple: ^2.0.1
 
   #-------- JSON Annotations -----
   #  json_annotation: ^2.0.0
@@ -105,9 +105,9 @@ dev_dependencies:
   #  chopper_generator: ^2.3.4
 
   #------ For Serialization objects ------
-  build_runner: ^2.1.11
-  json_serializable: ^6.2.0
-  retrofit_generator: ^4.0.1
+  build_runner: ^2.3.3
+  json_serializable: ^6.5.4
+  retrofit_generator: ^4.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
