--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
 
   #----- Social login ------
   google_sign_in: ^5.4.2
-  flutter_facebook_auth: ^5.0.6
+#  flutter_facebook_auth: ^5.0.6
 
   firebase_storage: ^11.0.8
 
